-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25, 9
-
Component/s: hotspot
-
b04
# Internal Error (/opt/jprt/T/P1/222732.vkozlov/s/src/share/vm/opto/ifg.cpp:803), pid=19098, tid=140613319059200
# assert(lrg._area >= 0.0) failed: negative spill area
Current thread (0x00007fe3381a3000): JavaThread "C2 CompilerThread7" daemon [_thread_in_native, id=19191, stack(0x00007fe316dee000,0x00007fe316eef000)]
Stack: [0x00007fe316dee000,0x00007fe316eef000], sp=0x00007fe316ee9ba0, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xf846ea] VMError::report_and_die()+0x2da;; VMError::report_and_die()+0x2da
V [libjvm.so+0x702f14] report_vm_error(char const*, int, char const*, char const*)+0x84;; report_vm_error(char const*, int, char const*, char const*)+0x84
V [libjvm.so+0x8b521f] PhaseChaitin::build_ifg_physical(ResourceArea*)+0x91f;; PhaseChaitin::build_ifg_physical(ResourceArea*)+0x91f
V [libjvm.so+0x588c8e] PhaseChaitin::Register_Allocate()+0x65e;; PhaseChaitin::Register_Allocate()+0x65e
V [libjvm.so+0x67831a] Compile::Code_Gen()+0x2ea;; Compile::Code_Gen()+0x2ea
V [libjvm.so+0x67bd98] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x1878;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x1878
V [libjvm.so+0x557761] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x2c1;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x2c1
V [libjvm.so+0x68968e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xace;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0xace
V [libjvm.so+0x68a4d4] CompileBroker::compiler_thread_loop()+0x5f4;; CompileBroker::compiler_thread_loop()+0x5f4
V [libjvm.so+0xf078e1] JavaThread::thread_main_inner()+0x221;; JavaThread::thread_main_inner()+0x221
V [libjvm.so+0xf07bdd] JavaThread::run()+0x2ad;; JavaThread::run()+0x2ad
V [libjvm.so+0xd19f78] java_start(Thread*)+0x108;; java_start(Thread*)+0x108
It starts to crash after 8031498.
# assert(lrg._area >= 0.0) failed: negative spill area
Current thread (0x00007fe3381a3000): JavaThread "C2 CompilerThread7" daemon [_thread_in_native, id=19191, stack(0x00007fe316dee000,0x00007fe316eef000)]
Stack: [0x00007fe316dee000,0x00007fe316eef000], sp=0x00007fe316ee9ba0, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xf846ea] VMError::report_and_die()+0x2da;; VMError::report_and_die()+0x2da
V [libjvm.so+0x702f14] report_vm_error(char const*, int, char const*, char const*)+0x84;; report_vm_error(char const*, int, char const*, char const*)+0x84
V [libjvm.so+0x8b521f] PhaseChaitin::build_ifg_physical(ResourceArea*)+0x91f;; PhaseChaitin::build_ifg_physical(ResourceArea*)+0x91f
V [libjvm.so+0x588c8e] PhaseChaitin::Register_Allocate()+0x65e;; PhaseChaitin::Register_Allocate()+0x65e
V [libjvm.so+0x67831a] Compile::Code_Gen()+0x2ea;; Compile::Code_Gen()+0x2ea
V [libjvm.so+0x67bd98] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x1878;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x1878
V [libjvm.so+0x557761] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x2c1;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x2c1
V [libjvm.so+0x68968e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xace;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0xace
V [libjvm.so+0x68a4d4] CompileBroker::compiler_thread_loop()+0x5f4;; CompileBroker::compiler_thread_loop()+0x5f4
V [libjvm.so+0xf078e1] JavaThread::thread_main_inner()+0x221;; JavaThread::thread_main_inner()+0x221
V [libjvm.so+0xf07bdd] JavaThread::run()+0x2ad;; JavaThread::run()+0x2ad
V [libjvm.so+0xd19f78] java_start(Thread*)+0x108;; java_start(Thread*)+0x108
It starts to crash after 8031498.
- relates to
-
JDK-8031498 Cleanup and re-factorize PhaseChaitin::build_ifg_physical
-
- Resolved
-