8033260: assert(lrg._area >= 0.0) failed: negative spill area

Change type from float to double on block frequency, and add check for +Inf - +Inf operation

Reviewed-by: kvn, roland